fixed overflow on aboutme

--- a/src/components/Terminal/IFrame/IFrame.css
+++ b/src/components/Terminal/IFrame/IFrame.css
@@ -1,9 +1,9 @@
 .iframe {
   width: 98.7%; /* Relative width to the parent div */
-  height: calc(100% - 35.4%); /* Set height to fill remaining space within parent div */
+  height: calc(100% - 35%); /* Set height to fill remaining space within parent div */
   border: none;
   box-sizing: border-box;
   position: absolute;
-  top: 24.8%; /* Adjust according to your layout */
+  top: 24.7%; /* Adjust according to your layout */
   overflow: hidden;
 }
